@@ -4624,6 +4624,99 @@ void mux_string::set_Color(size_t n, ANSI_ColorState acsColor)
     m_acs[n] = acsColor;
 }
 
+/*! \brief Removes a specified set of characters from string.
+ *
+ * \param pStripSet Pointer to string of characters to remove.
+ * \param nStart    Position in string to begin checking. Defaults to 0.
+ * \param nLen      Number of characters in string to check. Defaults to LBUF_SIZE-1.
+ * \return          None.
+ */
+
+void mux_string::strip(const char *pStripSet, size_t nStart, size_t nLen)
+{
+    static unsigned char strip_table[UCHAR_MAX+1];
+
+    if (  NULL == pStripSet
+       || '\0' == pStripSet[0]
+       || m_n <= nStart
+       || 0 == nLen)
+    {
+        // Nothing to do.
+        //
+        return;
+    }
+
+    if (m_n-nStart < nLen)
+    {
+        nLen = m_n-nStart;
+    }
+
+    // Load set of characters to strip.
+    //
+    memset(strip_table, 0, sizeof(strip_table));
+    while (*pStripSet)
+    {
+        strip_table[(unsigned char)*pStripSet] = 1;
+        pStripSet++;
+    }
+    stripWithTable(strip_table, nStart, nLen);
+}
+
+void mux_string::stripWithTable(const unsigned char strip_table[UCHAR_MAX+1], size_t nStart, size_t nLen)
+{
+    if (  m_n <= nStart
+       || 0 == nLen)
+    {
+        // Nothing to do.
+        //
+        return;
+    }
+
+    if (m_n-nStart < nLen)
+    {
+        nLen = m_n-nStart;
+    }
+
+    bool bInStrip = false;
+    size_t nStripStart = nStart;
+    for (size_t i = nStart; i < nStart + nLen; i++)
+    {
+        if (  !bInStrip
+           && 0 != strip_table[(unsigned char)m_ach[i]])
+        {
+            bInStrip = true;
+            nStripStart = i;
+        }
+        else if (  bInStrip
+                && 0 != strip_table[(unsigned char)m_ach[i]])
+        {
+            // We've hit the end of a string to be stripped.
+            //
+            size_t nStrip = i - nStripStart;
+            delete_Chars(nStripStart, nStrip);
+            i -= nStrip;
+            bInStrip = false;
+        }
+    }
+
+    if (bInStrip)
+    {
+        if (m_n == nStart+nLen)
+        {
+            // We found chars to strip at the end of the string.
+            // We can just truncate.
+            //
+            m_ach[nStripStart] = '\0';
+            m_n = nStripStart;
+        }
+        else
+        {
+            size_t nStrip = nStart + nLen - nStripStart;
+            delete_Chars(nStripStart, nStrip);
+        }
+    }
+}
+
 void mux_string::transformWithTable(const unsigned char xfrmTable[256], size_t nStart, size_t nLen)
 {
     if (m_n <= nStart)
