@@ -3,7 +3,8 @@ Last Update:  January 2007
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- -- Placeholder.
+ -- Added mux_string and fixed many functions including EDIT(),
+    REVERSE(), and DELETE() (Issues 14, 52, 100, and 232).
 
 
 Feature Additions:
@@ -48,6 +49,8 @@ Bug Fixes:
  -- Added mux_string and added ANSI-awareness to many functions
     including EDIT(), REVERSE(), and DELETE() (14, 52, 100, and 232).
     Thanks Jake and Alierak.
+ -- mid(abc,-1,2) now returns a, not ab. mid(abc,1,-2) now returns
+    ab, not a.  This is the documented behavior.
 
 
 Performance Enhancements:
@@ -71,3 +74,4 @@ Miscellaneous:
     Thanks Alierak.
  -- Documented use of a single backslash as a proper shortcut to
     @emit (Issue 219).  Thanks Alierak.
+ -- Removed unnecessary global pos variable from help.cpp (Issue 265).
